fix: correção de detalhe direita z-index

--- a/static/css/detalhe-dente.css
+++ b/static/css/detalhe-dente.css
@@ -42,6 +42,10 @@
   z-index: 1;
 }
 
+#sobre .detalhe-direita {
+  z-index: 1;
+}
+
 @media (max-width: 1440px) {
   .detalhe-container {
     display: none;
